# Megaman3NESRecomp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTINUE.md  DEBUG.md  DIVERGENCE.md  HANDOFF.md  ISSUES.md  README.md  ROBOT_MASTER_INTRO_FIX_SUCCESS.md  SUMMARY.md  build_game.bat  build_recomp.bat  convert_cfg_to_toml.py  convert_disasm.py  extract_banks.py  extras.c  game.cfg  game.toml  mm3_functions.txt  mm3_jsr_targets.txt  nesrecomp.pin  nestopia_bridge.cpp  nestopia_bridge.h  symbols.sym  verify_mode.c
banks/: instructions.txt
scripts/: boot_timing_test.txt  bug_repro_stage.txt  catch_write04.py  check_9b.py  check_bank.py  check_both.py  check_fd_quick.py  check_irq_target.py  check_irq_vec.py  check_irq_vector.py  check_state.py  chr_trace_capture.txt  compare_emu_native.py  compare_ppu.py  cutscene_detail.txt  diff_ppu_state.py  extract_data_regions.py  fiber_stage_entry.txt  find_first_divergence.py  follow_fd_raw.py  freeze_repro_v2.txt  gameplay_hold.txt  gameplay_stress.txt  hang_debug.txt  import_disasm_labels.py  intro_detailed.txt  intro_fiber_test.txt  intro_to_stage.txt  mapper_timeseries.py  mirror_emulated.txt  mirror_hold.txt  mirror_native.txt  mirror_query.txt  mirror_trace.txt  mirror_trace_slow.txt  nav_to_stage.py  navigate_to_stage.txt  phase1_navigate.txt  phase1b_diagnose.txt  phase3_gameplay.txt  (+89 more)
tools/: _check_state.py  _check_vram.py  _debug_ring.py  _debug_ring2.py  _disasm_sched.py  _dump_bank4.py  _dump_sched.py  _dump_table.py  _find_first_diverge.py  _press_start.py  _query.py  _query2.py  _query3.py  _query4.py  _query5.py  _query6.py  _query7.py  _query_emu.py  _query_emu2.py  _quick_sched.py  _sched_timeline.py  _show_catalog.py  _trace_8716.py  check_mirror.py  check_nt.py  check_nt2.py  check_nt_emu.py  check_ports.py  chr_diff.py  chr_trace_diff.py  compare_60.py  compare_chr.py  compare_nt.py  compare_ppu_regs.py  compare_scroll_ram.py  dbg.py  dual_screenshot.py  dump_bb34_tables.py  dump_followers.py  dump_stack.py  (+27 more)
(+6 files in other folders)
